# dbward

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-BSL  LICENSE-COMMERCIAL  LICENSE-MIT  README.md  SECURITY.md  compose.override.yml  compose.yml  dbward.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  install.sh  signing.pub
commercial/group-auth/: Cargo.toml
commercial/group-auth/src/: lib.rs
commercial/license/: Cargo.toml
commercial/license/src/: lib.rs  runtime.rs
commercial/oidc/: Cargo.toml
commercial/oidc/src/: lib.rs
crates/dbward-agent/: Cargo.toml
crates/dbward-agent/src/: cancel.rs  client.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  probes.rs  runner.rs  server_client.rs
crates/dbward-agent/src/executor/: handlers.rs  heartbeat.rs  mod.rs  result.rs  token.rs
crates/dbward-agent/src/runner/: drain.rs  mod.rs  poll.rs  preflight.rs  startup.rs
crates/dbward-agent/tests/: agent_test.rs
crates/dbward-api-client/: Cargo.toml
crates/dbward-api-client/src/: lib.rs
crates/dbward-app/: Cargo.toml
crates/dbward-app/src/: error.rs  lib.rs  test_support.rs
crates/dbward-app/src/ports/: authorizer.rs  clock.rs  crypto.rs  mod.rs  onboarding.rs  repos.rs  services.rs  sync_scope.rs  transaction.rs
crates/dbward-app/src/services/: audit_event_builder.rs  explain_formatter.rs  mod.rs  risk_display.rs  tables_display.rs
crates/dbward-app/src/use_cases/: agent_claim.rs  agent_heartbeat.rs  agent_poll.rs  agent_submit_result.rs  approve_request.rs  audit_query.rs  cancel_request.rs  create_request.rs  decision_trace.rs  dispatch_request.rs  dry_run.rs  get_request.rs  get_result.rs  get_schema.rs  list_requests.rs  mod.rs  policy_manage.rs  preflight.rs  reject_request.rs  resume_request.rs  risk_analysis.rs  schema_sync.rs  stream_result.rs  sync_config.rs  token_manage.rs  user_manage.rs  webhook_manage.rs
crates/dbward-app/tests/: lifecycle_test.rs
crates/dbward-cli/: Cargo.toml
crates/dbward-cli/src/: cli.rs  config.rs  config_loader.rs  display.rs  error.rs  lib.rs  main.rs  mcp.rs  mcp_defs.rs  oidc_login.rs  self_update.rs  server_client.rs
crates/dbward-cli/src/commands/: agent.rs  audit.rs  auth.rs  dev.rs  doctor.rs  execute.rs  group.rs  helpers.rs  migrate.rs  misc.rs  mod.rs  policy.rs  preflight.rs  request.rs  result.rs  server.rs  slack.rs  token.rs  user.rs  workflow.rs
crates/dbward-cli/src/display/: agent.rs  format.rs  mod.rs  request.rs  result.rs
crates/dbward-cli/src/mcp/: backend.rs  defs.rs  mod.rs  server.rs
crates/dbward-cli/src/output/: confirm.rs  error.rs  mod.rs  render.rs  types.rs  views.rs
crates/dbward-cli/tests/: output_format.rs
crates/dbward-config/: Cargo.toml
crates/dbward-config/src/: agent.rs  client.rs  error.rs  expand.rs  lib.rs  merged.rs  server.rs  transport.rs
crates/dbward-core/: Cargo.toml
crates/dbward-core/src/: audit.rs  config.rs  driver.rs  engine.rs  env_expand.rs  error.rs  lib.rs  query.rs  rbac.rs  request_status.rs  role.rs  token.rs  types.rs
crates/dbward-core/tests/: engine_test.rs  mysql_integration_test.rs  pg_integration_test.rs  query_security_test.rs  token_security_test.rs
crates/dbward-domain/: Cargo.toml
crates/dbward-domain/src/: lib.rs
crates/dbward-domain/src/auth/: mod.rs  permission.rs  resolved_role.rs  resource_context.rs  role_definition.rs
crates/dbward-domain/src/entities/: agent.rs  approval.rs  audit_event.rs  client_info.rs  database.rs  execution.rs  mod.rs  request.rs  result.rs  token.rs  user.rs  webhook.rs  webhook_delivery.rs
crates/dbward-domain/src/license/: mod.rs
crates/dbward-domain/src/policies/: access.rs  execution.rs  mod.rs  notification.rs  result.rs  sql_review.rs  workflow.rs
crates/dbward-domain/src/services/: approval_checker.rs  approval_progress.rs  classification.rs  fix_hints.rs  mod.rs  risk_scorer.rs  sql_classifier.rs  sql_parser.rs  sql_redactor.rs  sql_reviewer.rs  status_constants.rs  status_machine.rs  table_extractor.rs  workflow_matcher.rs  workflow_validator.rs
crates/dbward-domain/src/values/: database.rs  environment.rs  mod.rs  operation.rs  result_summary.rs  role.rs  selector.rs
crates/dbward-driver/: Cargo.toml
crates/dbward-driver/src/: cancel_state.rs  common.rs  error.rs  guard.rs  lib.rs  mysql.rs  pg_array.rs  postgres.rs  schema.rs
crates/dbward-infra/: Cargo.toml
crates/dbward-infra/src/: audit_crypto.rs  clock.rs  id_generator.rs  lib.rs  license_checker.rs  license_key.rs  notification_display.rs  result_channel.rs  token_admin.rs  token_signer.rs
crates/dbward-infra/src/auth/: api_token.rs  config_role_resolver.rs  db_role_resolver.rs  mod.rs  oidc.rs  (+1 more)
crates/dbward-infra/tests/: agent_test.rs  audit_test.rs  auth_test.rs  integration.rs  policy_test.rs  request_test.rs  sync_users_test.rs  uow_test.rs
crates/dbward-mcp/: Cargo.toml
crates/dbward-mcp/src/: defs.rs  handler.rs  lib.rs  ports.rs  prompts.rs  protocol.rs  resources.rs
crates/dbward-migrate/: Cargo.toml
crates/dbward-migrate/src/: approval.rs  error.rs  lib.rs  migrator.rs  parser.rs  runner.rs
crates/dbward-migrate/tests/: migrator_test.rs
crates/dbward-server/: Cargo.toml
crates/dbward-server/examples/: gen_license_key.rs
crates/dbward-server/src/: api_error.rs  auth.rs  authz.rs  background.rs  bootstrap.rs  config.rs  constants.rs  db.rs  http_elicitation.rs  lib.rs  license.rs  limits.rs  main.rs  mcp_backend.rs  metrics.rs  oidc.rs  policy.rs  preflight_notifier.rs  result_storage.rs  routes.rs  routes_legacy.rs  server_config.rs  session.rs  session_store.rs  state.rs  token.rs  update_checker.rs  util.rs  webhook.rs
crates/dbward-server/tests/: audit_completeness_test.rs  boundary_test.rs  concurrency_test.rs  feature_gating_test.rs  full_stack_test.rs  lease_test.rs  license_test.rs  mcp_sse_test.rs  pagination_test.rs  policy_crud_test.rs  security_authz_test.rs  security_token_test.rs  server_flow_test.rs  server_test.rs  state_machine_test.rs  token_webhook_test.rs  workflow_test.rs
(+319 files in other folders)
