[workspace]
resolver = "2"
members = [
    "crates/dbward-core",
    "crates/dbward-migrate",
    "crates/dbward-server",
    "crates/dbward-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/metapox/dbward"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
