[package]
name = "dbward-commercial-license"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-dbward-commercial"
publish = false
description = "dbward commercial license checker (Team/Enterprise plan enforcement)"

[dependencies]
dbward-app = { path = "../../crates/dbward-app" }
dbward-domain = { path = "../../crates/dbward-domain" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.10"
