[package]
name = "dbward-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "dbward agent — executes approved DB operations"

[dependencies]
dbward-core = { path = "../dbward-core", version = "0.1.0" }
dbward-api-types = { path = "../dbward-api-types" }
dbward-migrate = { path = "../dbward-migrate", version = "0.1.0" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = "2"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
hex = "0.4"
chrono.workspace = true
