[package]
name = "dbward-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dbward-agent"
path = "src/main.rs"

[dependencies]
dbward-driver = { path = "../dbward-driver", version = "0.1.0" }
dbward-migrate = { path = "../dbward-migrate" }
dbward-api-types = { path = "../dbward-api-types" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
sha2 = "0.10"
hostname = "0.4"
