[package]
name = "dbward-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dbward-agent"
path = "src/main.rs"

[dependencies]
dbward-config = { path = "../dbward-config" }
dbward-driver = { path = "../dbward-driver", version = "0.1.1" }
dbward-migrate = { path = "../dbward-migrate" }
dbward-api-types = { path = "../dbward-api-types" }
dbward-api-client = { path = "../dbward-api-client" }
dbward-domain = { path = "../dbward-domain" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
sha2 = "0.11"
hostname = "0.4"

[dev-dependencies]
rand = "0.10"
async-trait = "0.1"
