[package]
name = "dbward-app"
version = "0.2.0"
license.workspace = true
edition.workspace = true
description = "Application layer for dbward — use cases and port traits"

[dependencies]
dbward-config = { path = "../dbward-config" }
dbward-domain = { path = "../dbward-domain" }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
