[package]
name = "dbward-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dbward"
path = "src/main.rs"

[dependencies]
dbward-core = { path = "../dbward-core" }
dbward-migrate = { path = "../dbward-migrate" }
dbward-server = { path = "../dbward-server" }
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite = { version = "0.35", features = ["bundled"] }
