[package]
name = "dbward"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DB operations workflow engine with approval, RBAC, and audit logging"
keywords = ["database", "approval", "migration", "mcp", "workflow"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "dbward"
path = "src/main.rs"

[dependencies]
dbward-api-types = { path = "../dbward-api-types" }
dbward-config = { path = "../dbward-config" }
dbward-domain = { path = "../dbward-domain" }
dbward-migrate = { path = "../dbward-migrate", version = "0.1.1" }
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
open = "5"
base64 = "0.22"
dirs = "6"
rand = "0.10"
sha2 = "0.11"
chrono.workspace = true
unicode-width = "0.2"
flate2 = "1"
tar = "0.4"
tempfile = "3"
regex = "1"
