[package]
name = "dbward-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Configuration loading and validation for dbward binaries"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = "1"
thiserror = { workspace = true }
hostname = "0.4"
dirs = "6"
sha2 = "0.11"
dbward-domain = { path = "../dbward-domain" }

[dev-dependencies]
tempfile = "3"
