[package]
name = "dbward-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
toml.workspace = true
sqlx.workspace = true
tokio.workspace = true
ed25519-dalek = { version = "2" }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
