[package]
name = "dbward-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types, RBAC, and Ed25519 token verification for dbward"
keywords = ["database", "rbac", "audit", "workflow"]
categories = ["database"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
toml.workspace = true
sqlx.workspace = true
tokio.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
rand = "0.8"
