[package]
name = "dbward-domain"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description = "Domain layer for dbward — entities, policies, value objects, and domain services"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.62", features = ["visitor"] }
thiserror = "2"

[dev-dependencies]
serde_json.workspace = true
