[package]
name = "dbward-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_json = { workspace = true }
sqlx = { workspace = true }
sqlparser = "0.61"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
