[package]
name = "dbward-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Infrastructure layer for dbward — port trait implementations"

[dependencies]
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1"
dbward-domain = { path = "../dbward-domain" }
dbward-app = { path = "../dbward-app" }

# Async
async-trait = "0.1"
tokio = { workspace = true }

# Database
rusqlite = { version = "0.35", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.28"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Crypto
subtle = "2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# HTTP (webhook, OIDC)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Object storage
object_store = { version = "0.11", features = ["aws"] }
futures-util = "0.3"

# JWT / OIDC

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
sqlparser = { version = "0.61", features = ["visitor"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
