[package]
name = "dbward-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dbward-core = { path = "../dbward-core" }
tokio.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
