[package]
name = "dbward-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQL migration engine for PostgreSQL and MySQL with up/down support"
keywords = ["database", "migration", "postgresql", "mysql"]
categories = ["database"]

[dependencies]
dbward-core = { path = "../dbward-core", version = "0.1.0" }
tokio.workspace = true
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
