[package]
name = "dbward-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQL migration engine for PostgreSQL and MySQL with up/down support"
keywords = ["database", "migration", "postgresql", "mysql"]
categories = ["database"]

[dependencies]
dbward-driver = { path = "../dbward-driver", version = "0.1.1" }
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
dbward-driver = { path = "../dbward-driver" }
async-trait = "0.1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
