[package]
name = "dbward-server"
version.workspace = true
edition.workspace = true
license = "BUSL-1.1"
repository.workspace = true
rust-version.workspace = true
description = "Thin axum HTTP layer wiring dbward-app use cases"

[[bin]]
name = "dbward-server"
path = "src/main.rs"

[dependencies]
dbward-app = { path = "../dbward-app" }
dbward-api-types = { path = "../dbward-api-types" }
dbward-config = { path = "../dbward-config" }
dbward-domain = { path = "../dbward-domain" }
dbward-infra = { path = "../dbward-infra" }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { workspace = true }
ipnet = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
form_urlencoded = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
dbward-domain = { path = "../dbward-domain" }
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
